--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,7 +1,9 @@
 .header{
   height: 100px;
-  background: #8cc34b;
+  margin-bottom: 75px;
+  background: $green;
   color: #fff;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
   .container{
     display: flex;
     justify-content: space-between;
