--- a/src/css/section2.scss
+++ b/src/css/section2.scss
@@ -1,9 +1,13 @@
 .section2 {
+  min-height: 740px;
   background: url('../assets/images/pattern/pattern.png') repeat;
   .container {
     width: 950px;
+    min-height: 740px;
+    height: 100%;
     display: flex;
     flex-direction: column;
+    align-content: center;
     padding: 80px 0 60px;
     text-align: center;
     p{
@@ -21,7 +25,7 @@
 
 .courses-list{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
 }
@@ -30,8 +34,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  width: 300px;
-  margin-bottom: 20px;
+  width: 290px;
+  margin: 0 10px 20px;
   text-align: left;
   border-radius: 5px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
@@ -52,7 +56,7 @@
 .courses-image-wrapper{
   position: relative;
   overflow: hidden;
-  width: 300px;
+  width: 290px;
   height: 165px;
   &:after{
     position: absolute;
@@ -60,7 +64,7 @@
     left: 0;
     content: '';
     width: 100%;
-    height: 10px;
+    height: 5px;
     background-color: $green;
     opacity: 0;
     transition: opacity 1s;
@@ -73,7 +77,8 @@
 
 @keyframes green-bar{
   0% {
-    height: 5px;}
+    height: 5px;
+  }
   50%{
     height: 25px;
   }
@@ -149,6 +154,15 @@
 
 .checked{
   .courses-block{
+    .courses-image-wrapper{
+      &:after{
+        opacity: 1;
+        height: 165px;
+        background-color: rgba($green, .5);
+        animation-name: checked-green-bar;
+        animation-iteration-count: 1;
+      }
+    }
     .courses-main{
       background-color: #ecf4e2;
       .courses-title{
@@ -168,6 +182,35 @@
         color: $green;
       }
     }
+  }
+}
+
+@keyframes checked-green-bar{
+  0% {
+    opacity: 0;
+    height: 5px;
+    background-color: $green;
+  }
+  25%{
+    opacity: 1;
+  }
+  100%{
+    height: 165px;
+    background-color: rgba($green, .5);
+  }
+}
+
+.completed{
+  @include fira(bold);
+  display: none;
+  margin: auto;
+  font-size: 42px;
+  color: $green;
+  p{
+    display: inline-block;
+  }
+  .fa-check{
+    margin-right: 30px;
   }
 }
 
