--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,18 +1,17 @@
 .header{
   height: 100px;
   margin-bottom: 75px;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
   background: $green;
   color: #fff;
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
   .container{
     display: flex;
     justify-content: space-between;
     height: 100%;
   }
   a{
-    text-decoration: none;
     outline: none;
-    color: #fff;
+    text-decoration: none;
   }
 }
 
@@ -52,6 +51,11 @@
 .email{
   @include fira;
   font-size: 14px;
+  color: rgba(#fff, .6);
+  transition: color .5s;
+  &:hover{
+    color: #fff;
+  }
 }
 
 .socials{
