--- a/src/css/section2.scss
+++ b/src/css/section2.scss
@@ -1,5 +1,6 @@
 .section2 {
   min-height: 740px;
+  padding: 80px 0 60px;
   background: url('../assets/images/pattern/pattern.png') repeat;
   .container {
     width: 950px;
@@ -8,7 +9,6 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding: 80px 0 60px;
     text-align: center;
     p{
       margin: 0;
@@ -25,7 +25,7 @@
 
 .courses-list{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: flex-start;
 }
@@ -34,8 +34,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  width: 290px;
-  margin: 0 10px 20px;
+  width: 300px;
+  //margin: 0 10px 20px;
   text-align: left;
   border-radius: 5px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
@@ -56,16 +56,16 @@
 .courses-image-wrapper{
   position: relative;
   overflow: hidden;
-  width: 290px;
+  width: 300px;
   height: 165px;
   &:after{
     position: absolute;
     bottom: 0;
     left: 0;
-    content: '';
     width: 100%;
     height: 5px;
     background-color: $green;
+    content: '';
     opacity: 0;
     transition: opacity 1s;
     animation-name: green-bar;
@@ -132,10 +132,10 @@
   transition: background-color .5s;
   .fa-check{
     display: block;
-    opacity: 0;
     padding: 2px;
     font-size: 13px;
     color: #fff;
+    opacity: 0;
     transition: opacity .5s;
   }
   p{
@@ -156,9 +156,9 @@
   .courses-block{
     .courses-image-wrapper{
       &:after{
-        opacity: 1;
         height: 165px;
         background-color: rgba($green, .5);
+        opacity: 1;
         animation-name: checked-green-bar;
         animation-iteration-count: 1;
       }
@@ -172,8 +172,8 @@
     .courses-checkbox{
       background-color: #e8f1dc;
       .checkbox{
-        background-color: $green;
         border: 2px solid $green;
+        background-color: $green;
         .fa-check {
           opacity: 1;
         }
@@ -187,9 +187,9 @@
 
 @keyframes checked-green-bar{
   0% {
-    opacity: 0;
     height: 5px;
     background-color: $green;
+    opacity: 0;
   }
   25%{
     opacity: 1;
